External/Releases/A/6-100/V2024.03.30/Body/OldVersions/README_V1.md
***

# 4 year anniversary update (Beta 9, 2024, Saturday, March 30th)

**Tag:** `V2024.03.30`

**Released on:** `2024, Saturday, March 30th at 3:53 pm PST`

***Pre-release***

This is the 9th version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the sixth beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

---

## What's Changed (manually written by @seanpm2001)

- Archives: Archived data for release 8, archived data for discussion 79, Archived files related to the 9th remodel
- README: Updated README to version 83
- New media: logos (official and placeholder) for `CranberryOS` `DMAIL` `EMAIL 2` `EMAIL -3` `Hospital Defender` `LibreFlock` `uOffice`
- Other: No other changes

***
